# PhoenixGPU-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  UPSTREAM.md  coverage.out  go.mod  go.sum
.github/workflows/: api-server-quality.yml  ci.yml
cmd/api-server/: api_test.go  main.go  main_test.go  middleware_test.go  runtime_client_default.go  runtime_client_k8sfull.go
cmd/billing-engine/: main.go  main_stub.go
cmd/device-plugin/: main.go  main_stub.go
cmd/phoenix-controller/: main.go  main_stub.go
cmd/scheduler-extender/: main.go  main_stub.go
cmd/webhook/: main.go  main_stub.go
deploy/db/: 001_initial_schema.sql  migrate.sh
docs/: IMPLEMENTATION_GUIDE.md  INSTALLATION_DEPLOYMENT_GUIDE.md  PhoenixGPU-产品介绍与市场推广策划.docx  PhoenixGPU-安装部署指南.docx  PhoenixGPU-实施文档.docx  PhoenixGPU-测试文档.docx  TESTING_GUIDE.md  api-server-quality-playbook.md  api-server-quality-report-2026-03-21.md  enterprise-gates.md  gate1-round2-closure.md  gate1-round3-closure.md  gate1-round4-closure.md
docs/architecture/: ARCHITECTURE.md
docs/community/: ADOPTERS_GOVERNANCE_SECURITY.md  BLOG_POST_CHECKPOINT_PRINCIPLE.md  CNCF_DUE_DILIGENCE.md  (+2 more)
hack/: init-helm-repo.sh  kind-setup.sh  preflight-check.sh  profile-matrix.sh  setup-dev.sh  validate-deployment.sh
libvgpu/: CMakeLists.txt
libvgpu/include/: cuda_hook.h  libvgpu.h  nvml_hook.h  phoenix_meter.h
libvgpu/src/: cuda_hook.c  hook.c  nvml_hook.c  phoenix_meter.c
webui/: .env  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+124 files in other folders)
